# kaggle-hms-public

./: .gitignore  LICENSE  README.md  confdiff  fold_split_from_ari.py  pyproject.toml  requirements.txt  schedule.py  upload_annotator_image.sh  upload_dataset.py  upload_eeg_id.sh  upload_oof.sh
note/: 001_technical_termination.md  002_about_preprocessing.md  003_multi_instance_learning.md  004_ablation_study_of_2d_models.md  005_reference.md  006_gnn_baseline.md  007_binary_class_reduction.md  008_result_of_lb_probing.md  009_result_of_cv_tuning.md  010_about_competition_data.md
notebook/: calc_lb_probe.ipynb  demo_check_2d_image.ipynb  demo_spec_dataloader.ipynb  demo_stft.ipynb  eda.ipynb  eda_1d_vs_2d.ipynb  eda_class_weight.ipynb  eda_discretized_pp.ipynb  eda_error_analysis.ipynb  eda_gt_pred_confusion.ipynb  eda_label_dist_v2.ipynb  eda_label_quality.ipynb  eda_lb_probing.ipynb  eda_numerical_hack.ipynb  eda_on_label_distribution.ipynb  eda_on_pseudo_label.ipynb  generate_annotator_image.ipynb  local_cv.ipynb  melder_mead.ipynb  split_eeg_id_per_quality.ipynb
run/: batch_infer.py  ensemble.py  fold_split.py  infer.py  model_checkpoint.py  preprocess.py  pseudo_label.py  pseudo_label_per_label.py  train.py  wave2spec.py
run/conf/: baseline.yaml  baseline_contrastive.yaml  baseline_contrastive_v2.yaml  (+306 more)
src/: array_util.py  config.py  constant.py  data_util.py  error_analysis.py  evaluator.py  infer_util.py  logger.py  plot_util.py  preprocess.py  proc_util.py  random_util.py  train_util.py  trainer.py  visualization.py
team/: 20240322_meeting.md
(+367 files in other folders)
