[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "src"
authors = [{ name = "@bilzard" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "hydra-core >= 1.3.2",
    "wandb >= 0.16.1",
    "torchinfo >= 1.8.0",
    "segmentation_models_pytorch >= 0.3.3",
    "kaggle <= 1.5.16",
    "polars >= 0.20.0",
    "transformers >= 4.37.2",
]
dynamic = ["version"]

[tool.setuptools.packages]
find = {}
